--- a/src/styles/Configs.css
+++ b/src/styles/Configs.css
@@ -12,3 +12,9 @@
     flex-direction: column;
     align-items: center;
 }
+
+@media screen and (orientation:portrait) {
+    .configs {
+        height: 30%;
+    }
+}
